Fix: fix overlap with glances charts in multi-widgets (#4653)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,3 +67,8 @@ dialog ::-webkit-scrollbar {
 .chart + .chart {
   margin-top: 2em;
 }
+
+.service-container + .chart {
+  margin-top: 2.5rem;
+  margin-bottom: .5rem;
+}
